; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/aarch64/extr_swscale_unscaled.c_ff_get_unscaled_swscale_aarch64.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/aarch64/extr_swscale_unscaled.c_ff_get_unscaled_swscale_aarch64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_get_unscaled_swscale_aarch64(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = call i32 (...) @av_get_cpu_flags()
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i64 @have_neon(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @get_unscaled_swscale_neon(i32* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @av_get_cpu_flags(...) #1

declare dso_local i64 @have_neon(i32) #1

declare dso_local i32 @get_unscaled_swscale_neon(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
